--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
-<title>Background Generator</title
-=======
-<title>Backgroud generator</title
->>>>>>> master
+
+<title>Background Generator</title>
+	
+<title>Backgroud generator</title>
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
