--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Backgroud generator</title>
+<title>Backgroud generatorfgfgfgfgfg</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
